# openinference-semantic-conventions-rs

./: Cargo.toml  README.md
src/: attribute.rs
